# inventory-management-system

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml
src/: __init__.py  base_product.py  category.py  exceptions.py  lawn_grass.py  main.py  mixins.py  product.py  smartfone.py
test_results/: test_results_abstract_classes.html  test_results_category.html  test_results_exceptions.html  test_results_inheritance.html  test_results_new_functionality.html  test_results_product.html
tests/: conftest.py  test_abstract_classes.py  test_category.py  test_exceptions.py  test_inheritance.py  test_magic_methods.py  test_new_functionality.py  test_product.py
